--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "cross-env NODE_ENV=production remax build -t wechat"
   },
   "dependencies": {
+    "clsx": "^1.1.0",
     "react": "^16.12.0",
     "remax": "^2.0.7"
   },
