--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cross-env": "^7.0.2",
     "cz-conventional-changelog": "^3.2.0",
     "husky": "^4.2.5",
+    "postcss-nested": "^4.2.1",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
     "typescript": "^3.7.3"
