--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   },
   "dependencies": {
     "clsx": "^1.1.0",
+    "lodash.pickby": "^4.6.0",
     "react": "^16.12.0",
     "remax": "^2.0.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@types/lodash.pickby": "^4.6.6",
     "@types/react": "^16.9.16",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
