--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@types/fs-extra": "^9.0.1",
     "@types/lodash.pickby": "^4.6.6",
+    "@types/node": "^14.0.5",
     "@types/react": "^16.9.16",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
+    "commander": "^5.1.0",
     "cross-env": "^7.0.2",
     "cz-conventional-changelog": "^3.2.0",
     "eslint": "^7.1.0",
@@ -33,7 +36,9 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
+    "fs-extra": "^9.0.0",
     "husky": "^4.2.5",
+    "pascal-case": "^3.1.1",
     "postcss-nested": "^4.2.1",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
