--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@types/react": "^16.9.16",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
+    "camelcase": "^6.0.0",
+    "chalk": "^4.0.0",
     "commander": "^5.1.0",
     "cross-env": "^7.0.2",
     "cz-conventional-changelog": "^3.2.0",
@@ -38,6 +40,7 @@
     "eslint-plugin-react-hooks": "^4.0.4",
     "fs-extra": "^9.0.0",
     "husky": "^4.2.5",
+    "log-symbols": "^4.0.0",
     "pascal-case": "^3.1.1",
     "postcss-nested": "^4.2.1",
     "prettier": "^2.0.5",
