--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "clsx": "^1.1.0",
     "lodash.pickby": "^4.6.0",
     "react": "^16.12.0",
-    "remax": "^2.0.7"
+    "remax": "^2.0.7",
+    "remax-vant-cli": "^0.6.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
