--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     },
     "lib": ["DOM", "ES2015"]
   },
-  "include": ["typings/**/*", "packages/**/*", "public/**/*"]
+  "include": ["typings/**/*", "packages/**/*", "storyboard/**/*"]
 }
