--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "clsx": "^1.1.0",
     "lodash.pickby": "^4.6.0",
     "react": "^16.12.0",
-    "remax": "^2.5.4",
-    "remax-vant-cli": "^0.7.1"
+    "remax": "^2.5.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
