chore: 🔧add remax-vant-cli

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,7 @@
     "jsx": "preserve",
     "rootDir": "packages",
     "baseUrl": "./",
-    "paths": {
-      "@/*": ["./packages/*"]
-    },
+    "paths": {},
     "lib": ["DOM", "ES2015"]
   },
   "include": ["typings/**/*", "packages/**/*", "storyboard/**/*"]
