--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "postcss-nested": "^4.2.1",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
+    "remax-vant-cli": "^0.8.0",
     "typescript": "^3.7.3"
   },
   "husky": {
