--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "remax-vant",
-  "private": true,
   "version": "1.0.0",
   "description": "yet, remax migrate version with vant-weapp based.",
   "main": "index.js",
@@ -8,16 +7,18 @@
   "author": "huang.jian <hjj491229492@hotmail.com>",
   "license": "MIT",
   "scripts": {
+    "predev": "rm -rf dist",
     "dev": "remant bootstrap -f storyboard/app.template.ts",
-    "build": "cross-env NODE_ENV=production remax build -t wechat"
+    "precompile": "rm -rf lib",
+    "compile": "babel packages --out-dir lib --extensions '.ts,.tsx' --copy-files",
+    "prepublishOnly": "npm run compile"
   },
   "dependencies": {
     "clsx": "^1.1.0",
-    "lodash.pickby": "^4.6.0",
-    "react": "^16.12.0",
-    "remax": "^2.6.0"
+    "lodash.pickby": "^4.6.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.10.4",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@types/fs-extra": "^9.0.1",
@@ -26,7 +27,7 @@
     "@types/react": "^16.9.16",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
-    "camelcase": "^6.0.0",
+    "babel-preset-remax": "^2.6.0",
     "cross-env": "^7.0.2",
     "cz-conventional-changelog": "^3.2.0",
     "eslint": "^7.1.0",
@@ -43,6 +44,10 @@
     "pretty-quick": "^2.0.1",
     "remax-vant-cli": "^0.8.0",
     "typescript": "^3.7.3"
+  },
+  "peerDependencies": {
+    "react": "^16.12.0",
+    "remax": "^2.6.0"
   },
   "husky": {
     "hooks": {
