--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,20 @@
 {
   "presets": [
     [
-      "remax",
+      "@babel/preset-env",
       {
-        "targets": ["IOS >= 10", "Android >= 5"]
+        "modules": false,
+        "loose": true
       }
-    ]
+    ],
+    "@babel/preset-react",
+    "@babel/preset-typescript"
+  ],
+  "plugins": [
+    "babel-plugin-macros",
+    "@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-proposal-optional-chaining",
+    "@babel/plugin-proposal-nullish-coalescing-operator",
+    "@babel/plugin-proposal-class-properties"
   ]
 }
