--- a/package.json
+++ b/package.json
@@ -2,10 +2,18 @@
   "name": "remax-vant",
   "version": "1.0.0",
   "description": "yet, remax migrate version with vant-weapp based.",
-  "main": "index.js",
-  "keywords": [],
+  "keywords": [
+    "remax",
+    "vant-weapp"
+  ],
   "author": "huang.jian <hjj491229492@hotmail.com>",
   "license": "MIT",
+  "types": "./packages/index.ts",
+  "module": "./lib/index.js",
+  "files": [
+    "lib",
+    "packages"
+  ],
   "scripts": {
     "predev": "rm -rf dist",
     "dev": "remant bootstrap -f storyboard/app.template.ts",
@@ -46,7 +54,7 @@
     "typescript": "^3.7.3"
   },
   "peerDependencies": {
-    "react": "^16.12.0",
+    "react": "^16.13.1",
     "remax": "^2.6.0"
   },
   "husky": {
