--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "lib",
     "packages"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:huang-xiao-jian/remax-vant.git"
+  },
   "scripts": {
     "predev": "rm -rf dist",
     "dev": "remant bootstrap -f storyboard/app.template.ts",
@@ -29,6 +33,8 @@
     "@babel/cli": "^7.10.4",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
     "@types/fs-extra": "^9.0.1",
     "@types/lodash.pickby": "^4.6.6",
     "@types/node": "^14.0.5",
@@ -51,6 +57,7 @@
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
     "remax-vant-cli": "^0.8.0",
+    "semantic-release": "^17.1.1",
     "typescript": "^3.7.3"
   },
   "peerDependencies": {
