--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -23,4 +23,5 @@ rules:
   # 临时关闭
   'explicit-module-boundary-types': off
   'react/prop-types': off
+  'import/prefer-default-export': off
   '@typescript-eslint/camelcase': off
